@@ -1,3 +1,8 @@
+2008-08-27  Emilio Meschi  <emilio.meschi@cern.ch>
+
+	* tag V01-03-04
+	* pull mode HLT config and added squid check to monitor and web page
+
 2008-06-19  Emilio Meschi  <emilio.meschi@cern.ch>
 
 	* tag V01-03-03
